@@ -7,7 +7,6 @@ import org.bukkit.Location;
 import org.bukkit.command.Command;
 import org.bukkit.entity.Player;
 import org.morganm.homespawnplus.command.BaseCommand;
-import org.morganm.homespawnplus.storage.Storage;
 
 /**
  * @author morganm
@@ -20,7 +19,7 @@ public class SetDefaultSpawn extends BaseCommand {
 		if( !defaultCommandChecks(p) )
 			return true;
 		
-		boolean localOnlyFlag = false;
+//		boolean localOnlyFlag = false;
 		
 		if( args.length < 1 ) {
 			util.sendMessage(p, "You must specify the spawnName to set as default.");
